# dgrm

./: Cargo.toml  README.md  read_grm_first100.R  test_grm_fixed.grm.id  test_grm_fixed.grm.summary  test_r_script.R  verification_grm.grm.summary  verification_grm_final.grm.summary  verification_grm_fixed.grm.summary  verification_test.txt  verify_fix.R
.cargo/: config.toml
examples/: sample_data.txt  test_run.sh
src/: cli.rs  data_io.rs  error.rs  gcta_writer.rs  grm_calculator.rs  main.rs
